# Keypilot

./: .gitignore  CLAUDE.md  README.md  agents.md  调研报告.md
.github/workflows/: ci.yml
docs/: development-plan.md  release-notes-template.md  调研报告.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  i18n.ts  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  keypilot.manifest  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: adapters.rs  error.rs  installer.rs  lib.rs  main.rs  models.rs  process.rs  storage.rs
