[package]
name = "keypilot"
version = "0.1.0"
description = "Keypilot desktop app"
authors = ["Keypilot Team"]
edition = "2021"

[lib]
name = "keypilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tauri = { version = "2.0.0", features = ["tray-icon"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
which = "6"
